# nuttx-apps-sync

./: Kconfig
.github/: labeler.yml
.github/workflows/: build.yml
audioutils/: Kconfig
benchmarks/: Kconfig
boot/: Kconfig
boot/nxboot/: CMakeLists.txt  nxboot_main.c
boot/nxboot/include/: nxboot.h
boot/nxboot/loader/: boot.c
boot/nxboot/tools/: nximage.py
builtin/: Make.dep  builtin_list.h  builtin_proto.h
builtin/registry/: Snake.bdat  Snake.pdat  Test.bdat  Test.pdat  fb.bdat  fb.pdat  fboverlay.bdat  fboverlay.pdat  hidkbd.bdat  hidkbd.pdat  i2c.bdat  mount.bdat  myi2c.bdat  myi2c.pdat  myled.bdat  myled.pdat  mytouch.bdat  mytouch.pdat  nx.bdat  nx.pdat  nxhello.bdat  nxhello.pdat  nxterm.bdat  nxterm.pdat  nxtext.bdat  nxtext.pdat
canutils/: Kconfig
crypto/: Kconfig
crypto/openssl_mbedtls_wrapper/include/openssl/: err.h
examples/: Kconfig
examples/alarm/: alarm_main.c
examples/dronecan/: Kconfig
examples/elf/: CMakeLists.txt
examples/elf/tests/hello/: hello.c
examples/elf/tests/task/: Makefile
examples/fb/: Make.dep
examples/fboverlay/: Make.dep  fboverlay_main.c
examples/hidkbd/: Make.dep
examples/mcuboot/: Kconfig
examples/mount/: Make.dep  mount_main.c
examples/myi2c/: CMakeLists.txt  Kconfig  Make.defs  Make.dep  Makefile  myi2c_main.c
examples/myled/: CMakeLists.txt  Kconfig  Make.defs  Make.dep  Makefile  myled_main.c
examples/mylvgl/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile  ParameterInfo.c  ParameterInfo.h  buzzer.c  buzzer.h  led_handler.c  led_handler.h  lvgl_event.c  lvgl_event.h  modbus_data.c  modbus_data.h  modbus_slave.c  modbus_slave.h  modbus_slave_instance.c  modbus_slave_instance.h  mylvgl.c  nsh_terminal.c  nsh_terminal.h  sd_handler.c  sd_handler.h
examples/mylvgl/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
examples/mylvgl/ui/screens/: ui_DeviceCtrl.c  ui_DeviceCtrl.h  ui_FileEdit.c  ui_FileEdit.h  ui_FileExplorer.c  ui_FileExplorer.h  ui_HomeScreen.c  ui_HomeScreen.h  ui_Information.c  ui_Information.h  ui_LedCtrlTest.c  ui_LedCtrlTest.h  ui_ModbusSlave.c  ui_ModbusSlave.h  ui_ModebusTest.c  ui_ModebusTest.h  ui_MusicPlayer.c  ui_MusicPlayer.h  ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h  ui_Screen3.c  ui_Screen3.h  ui_SdCardAndFatFsTest.c  ui_SdCardAndFatFsTest.h  ui_Terminal.c  ui_Terminal.h
examples/mytouch/: CMakeLists.txt  Kconfig  Make.defs  Make.dep  Makefile  mytouch_main.c
examples/netlink_route/: netlink_route_main.c
examples/noteprintf/: noteprintf_main.c
examples/nx/: Make.dep
examples/nxdemo/: Make.dep
examples/nxhello/: Make.dep  nx2Snake.h  nxhello_main.c
examples/nxscope/: nxscope_main.c
examples/nxterm/: Make.dep  nxterm_internal.h  nxterm_listener.c  nxterm_main.c
examples/nxtext/: Make.dep
examples/test/: Kconfig  Make.defs  Make.dep  Makefile  test_main.c
fsutils/: Kconfig
fsutils/mkfatfs/: Make.dep  configfat.c
games/: Kconfig
games/Snake/: CMakeLists.txt  Kconfig  Make.defs  Make.dep  Makefile  game_linux_main.c  game_nuttx_main.c  game_windows_main.c  nx_events.c  nx_internal.h  nx_kbdin.c  nx_main.c  program  snake.c  snake.h  snake_logic.c  snake_logic.h  touch.c  touch.h
gpsutils/: Kconfig
graphics/: Kconfig
graphics/lvgl/: .gitignore  Kconfig
graphics/lvgl/lvgl/src/drivers/nuttx/: lv_nuttx_fbdev.c
industry/: .gitignore  Kconfig
industry/upf/: .gitignore  CMakeLists.txt  Kconfig  Make.defs  Makefile
interpreters/: Kconfig
interpreters/luamodules/: Kconfig
logging/: Kconfig
logging/nxscope/: nxscope_chan.c
lte/: Kconfig
math/: Kconfig
mlearning/: Kconfig
modbus/: Make.defs
netutils/: Kconfig
netutils/dhcpd/: dhcpd.c
netutils/netinit/: netinit.c
netutils/thttpd/: tdate_parse.c
nshlib/: Make.dep  nsh.h  nsh_command.c  nsh_consolemain.c  nsh_fsutils.c  nsh_session.c
platform/: Make.dep  board
sdr/: Kconfig
system/: Kconfig
system/cle/: Make.dep
system/i2c/: Make.dep  i2c_dev.c  i2c_main.c
system/nsh/: Make.dep
system/readline/: Make.dep  readline_common.c
system/sensorscope/: sensorscope_main.c
system/system/: Make.dep
system/zmodem/: zm_receive.c
system/zmodem/host/nuttx/: compiler.h
testing/: Kconfig
testing/fs/fstest/: fstest_main.c
testing/libc/scanftest/: Kconfig
testing/nettest/tcp/: test_tcp.c  test_tcp_connect_ipv4.c
testing/ostest/: wdog.c
testing/testsuites/kernel/syscall/cases/: clock_nanosleep_test.c  fsync_test.c  time_test.c
wireless/: Kconfig
wireless/bluetooth/: Kconfig
wireless/ieee802154/: Kconfig
